Bug 975 - fixed css alignment problem r=me/koshi
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@2291 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/content/css/mainwin.css
+++ b/feathers/rubberducky/content/css/mainwin.css
@@ -214,6 +214,8 @@ Minimize, Maximize, Restore, and Switch to Mini-Mode
 ************************************************************************************************************************************************
 */
 
+
+
 .mac > #sysbtn_maximize
 {
   width: 15px !important;
@@ -228,7 +230,7 @@ Minimize, Maximize, Restore, and Switch to Mini-Mode
   max-width: 15px !important;
   max-height: 15px !important;
   border: none !important;
-  margin: -2px 0px 0px 0px !important;
+  margin: -1px 0px 0px 0px !important;
   padding: 0px !important;
 }
 
